# cloverleaf

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: glafic_-150kmps.yaml  glafic_-50kmps.yaml  glafic_0kmps.yaml  glafic_my-1-model.yaml  glafic_my-2-model.yaml  glafic_source2.yaml
script/: main.py
script/calc/: Change_relative_(0,0).py  Einstein radius to mass.py  mass to velocity dispersion.py
script/config/: glafic.yaml
script/configs/: glafic.yaml  glafic_-100kmps.yaml  glafic_100kmps.yaml  glafic_150kmps.yaml  glafic_50kmps.yaml  glafic_my-3-model.yaml
script/misc/: functions.py  makeinput.py
scripts/: main.py
scripts/snippets/: Einrad_to_mass.py  change_refcoords.py  make_cube.py  parse_mcmc.py
scripts/utils/: functions.py
