[tool.poetry]
name = "cloverleaf"
version = "0.1.0"
description = ""
authors = [
    "Tsuyoshi Ishida <tishida@ioa.s.u-tokyo.ac.jp>",
    "Takuro Odagawa <j20195307k@myjuen.jp>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
matplotlib = "^3.3.2"
astropy = "^4.1"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
